# koikoi

./: .bumpversion.cfg  .gitignore  README  README.md  meson.build
data/: meson.build  nightsky30.koikoi.appdata.xml  nightsky30.koikoi.desktop
data/resources/: deck.qrc
data/resources/backgrounds/: background.qrc  backgrounds.qrc
data/resources/decks/: decks.qrc
data/translations/: fr.qm  fr.ts
logo/: icon.qrc
misc/: meson.cross.win.x64  meson.cross.win.x86
src/: Test.cpp  Test.h  about.cpp  about.h  ai.cpp  ai.h  card.cpp  card.h  config.h  config.h.in  deck.cpp  deck.h  game.cpp  game.h  hand.cpp  hand.h  koikoi.cpp  koikoi.h  main.cpp  meson.build  player.cpp  player.h  preferences.cpp  preferences.h  yaku.cpp  yaku.h
ui/: koikoi.ui  preferences.ui
